--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,6 +15,8 @@
 			{{ .Content }}
 		</section>
 
+		<br>
+		<br>
 		<div class="post-tags">
 			{{ if ne .Type "page" }}
 			{{ if gt .Params.tags 0 }}
@@ -28,15 +30,9 @@
 			{{ end }}
 			{{ end }}
 		</div>
-		{{- $.Scratch.Set "isDisqus" true -}}
-		<!-- Check if disqus short name is given -->
-		{{ if not .Site.DisqusShortname }}
-		{{- $.Scratch.Set "isDisqus" false -}}
+		{{ if or .Params.comment .Site.Params.comment }}
+		{{ partial "comment.html" . }}
 		{{ end }}
-
-		{{- if eq ($.Scratch.Get "isDisqus") true -}}
-		{{- partial "disqus.html" . -}}
-		{{- end -}}
 	</article>
 </main>
 {{ end }}
