fix utterances error

--- a/layouts/partials/utterances.html
+++ b/layouts/partials/utterances.html
@@ -1,8 +1,8 @@
 <script src="https://utteranc.es/client.js"
-        repo="{{.Params.utterances_repo}}"
+        repo="{{.Site.Params.utterances_repo}}"
         issue-term="title"
         label="💬comment"
-        theme="github-light"
+        theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
 </script>
