--- a/layouts/partials/utterances.html
+++ b/layouts/partials/utterances.html
@@ -1,6 +1,6 @@
 <script src="https://utteranc.es/client.js"
-        repo="{{.Site.Params.utterances_repo}}"
-        issue-term="title"
+        repo="{{.Site.Params.utterances}}"
+        issue-term="pathname"
         label="💬comment"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
